--- a/HTML/Home.html
+++ b/HTML/Home.html
@@ -4,10 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Welcome to Kimo's Garden</title>
+    <link rel="icon" type="image/png" href="../Media/Kimo'sGarden-Logo.png">
     <link rel="stylesheet" href="../CSS/StyleHome.css">
 </head>
 <body>
-    <h1>Welcome to Kimo's Garden</h1>
-    <script src="../JS/script.js"></script>
+    <div id="intro">
+        <video id="intro-video" autoplay muted playsinline>
+            <source src="../Media/Kimo's garden logo.mp4" type="video/mp4">
+        </video>
+    </div>
+
+    <div id="main-content">
+        <h1>Welcome to Kimo’s Garden Restaurant</h1>
+    </div>
+    <script src="../JS/HomeScript.js"></script>
 </body>
 </html>
