--- a/HTML/Home.html
+++ b/HTML/Home.html
@@ -8,14 +8,18 @@
     <link rel="stylesheet" href="../CSS/StyleHome.css">
 </head>
 <body>
+    <!--
     <div id="intro">
         <video id="intro-video" autoplay muted playsinline>
             <source src="../Media/Kimo's garden logo.mp4" type="video/mp4">
         </video>
     </div>
-
+-->
     <div id="main-content">
-        <h1>Welcome to Kimo’s Garden Restaurant</h1>
+        <div id="intro-container">
+            <h1>Welcome to Kimo’s Garden Restaurant</h1>
+            <h2>Where nature meets flavor</h2>
+        </div>   
     </div>
     <script src="../JS/HomeScript.js"></script>
 </body>
