--- a/HTML/Home.html
+++ b/HTML/Home.html
@@ -8,15 +8,24 @@
     <link rel="stylesheet" href="../CSS/StyleHome.css">
 </head>
 <body>
-    <!--
+    
     <div id="intro">
         <video id="intro-video" autoplay muted playsinline>
             <source src="../Media/Kimo's garden logo.mp4" type="video/mp4">
         </video>
     </div>
--->
+
     <div id="main-content">
+        
         <div id="intro-container">
+            <aside class="sidebar">
+                <h2>Kimo’s Garden</h2>
+                <ul>
+                <li><a href="../HTML/Home.html">Home</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Contact</a></li>
+                </ul>
+            </aside>
             <h1>Welcome to Kimo’s Garden Restaurant</h1>
             <h2>Where nature meets flavor</h2>
         </div>   
