all pages included with essential

--- a/HTML/About.html
+++ b/HTML/About.html
@@ -12,8 +12,9 @@
         <h2>Kimo’s Garden</h2>
         <ul>
             <li><a href="../HTML/Home.html">Home</a></li>
+            <li><a href="../HTML/Menu.html">Menu</a></li>
             <li><a href="../HTML/About.html">About</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="../HTML/Contact.html">Contact</a></li>
         </ul>
     </aside>
     <div id="About-container">
