--- a/HTML/Home.html
+++ b/HTML/Home.html
@@ -22,9 +22,10 @@
             <aside class="sidebar">
                 <h2>Kimo’s Garden</h2>
                 <ul>
-                <li><a href="../HTML/Home.html">Home</a></li>
-                <li><a href="../HTML/About.html">About</a></li>
-                <li><a href="#">Contact</a></li>
+                    <li><a href="../HTML/Home.html">Home</a></li>
+                    <li><a href="../HTML/Menu.html">Menu</a></li>
+                    <li><a href="../HTML/About.html">About</a></li>
+                    <li><a href="../HTML/Contact.html">Contact</a></li>
                 </ul>
             </aside>
             <h1>Welcome to Kimo’s Garden Restaurant</h1>
