Main menu done added all the rest of pages

--- a/HTML/Menu.html
+++ b/HTML/Menu.html
@@ -17,6 +17,63 @@
             <li><a href="../HTML/Contact.html">Contact</a></li>
         </ul>
     </aside>
+    <div id="Menu-container">
+        <h2>Our Menu Categories</h2>
+        <div class="menu-item">
+            <img src="../Media/appetizers.jpg" alt="Appetizers">
+            <h3>Appetizers</h3> 
+            <p>Delicious starters to kick off your meal.</p>
+            <button class="menu-button" onclick="location.href='../HTML/Appetizers.html'">View More</button>
+        </div>
+        <div class="menu-item">
+            <img src="../Media/burgers.jpg" alt="Burgers">
+            <h3>Burgers</h3> 
+            <p>Juicy burgers made with the freshest ingredients.</p>
+            <button class="menu-button" onclick="location.href='../HTML/Burgers.html'">View More</button>
+        </div>
+        <div class="menu-item">
+            <img src="../Media/salads.jpeg" alt="Salads">
+            <h3>Salads</h3> 
+            <p>Fresh and healthy salads to complement your meal.</p>
+            <button class="menu-button" onclick="location.href='../HTML/Salads.html'">View More</button>
+        </div>
+        <div class="menu-item">
+            <img src="../Media/sandwiches.jpg" alt="Sandwiches">
+            <h3>Sandwiches</h3> 
+            <p>Hearty sandwiches made with artisanal bread.</p>
+            <button class="menu-button" onclick="location.href='../HTML/Sandwiches.html'">View More</button>
+        </div>
+        <div class="menu-item">
+            <img src="../Media/wraps.jpeg" alt="Wraps">
+            <h3>Wraps</h3> 
+            <p>Flavorful wraps filled with fresh ingredients.</p>
+            <button class="menu-button" onclick="location.href='../HTML/Wraps.html'">View More</button>
+        </div>
+        <div class="menu-item">
+            <img src="../Media/platters.png" alt="Platters">
+            <h3>Platters</h3> 
+            <p>Assorted platters perfect for sharing.</p>
+            <button class="menu-button" onclick="location.href='../HTML/Platters.html'">View More</button>
+        </div>
+        
+        <div class="menu-item">
+            <img src="../Media/desserts.jpeg" alt="Desserts">
+            <h3>Desserts</h3>
+            <p>Indulge in our sweet treats to end your meal.</p>
+            <button class="menu-button" onclick="location.href='../HTML/Desserts.html'">View More</button>
+        </div>
+        <div class="menu-item">
+            <img src="../Media/drinks.jpeg" alt="Drinks">
+            <h3>Drinks</h3> 
+            <p>Refreshing beverages to complement your meal.</p>
+            <button class="menu-button" onclick="location.href='../HTML/Drinks.html'">View More</button>
+        </div>
+        <div class="menu-item">
+            <h3>Extras</h3>
+            <p>Additional items to complement your meal.</p>
+            <button class="menu-button" onclick="location.href='../HTML/Extras.html'">View More</button>
+        </div>
+    </div>
     <a href="https://wa.me/961XXXXXXXX" class="whatsapp-float" target="_blank">
             <img src="../Media/whatsapp-icon.png" alt="WhatsApp" class="whatsapp-icon">
     </a>
