contact page up and running

--- a/HTML/Contact.html
+++ b/HTML/Contact.html
@@ -17,6 +17,22 @@
             <li><a href="../HTML/Contact.html">Contact</a></li>
         </ul>
     </aside>
+    <div class="contact-info">
+        <h2>Contact Us</h2>
+        <p>If you have any questions or inquiries, feel free to reach out to us!</p>
+        <p>We would love to hear from you!</p>
+        <p>contact us at: 📞 <a href="tel:+96171804331">+961 71 804 331</a> or by clicking the whatsapp logo below:</p>
+        <p>Email us at: 📧 <a href="mailto:info@kimosgarden.com">info@kimosgarden.com</a></p>
+        <p>Location:</p>
+        <div class="map-container">
+            <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3314.856564464946!2d35.59240007573916!3d33.81601443016687!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x151f2327fb2f0be3%3A0x9938f182b4536acc!2sKimo&#39;s%20Garden!5e0!3m2!1sen!2slb!4v1761925373747!5m2!1sen!2slb"
+                allowfullscreen=""
+                loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade">
+            </iframe>
+        </div>
+    </div>
     <a href="https://wa.me/961XXXXXXXX" class="whatsapp-float" target="_blank">
             <img src="../Media/whatsapp-icon.png" alt="WhatsApp" class="whatsapp-icon">
     </a>
