contact page up and running with actual email

--- a/HTML/Contact.html
+++ b/HTML/Contact.html
@@ -22,7 +22,7 @@
         <p>If you have any questions or inquiries, feel free to reach out to us!</p>
         <p>We would love to hear from you!</p>
         <p>contact us at: 📞 <a href="tel:+96171804331">+961 71 804 331</a> or by clicking the whatsapp logo below:</p>
-        <p>Email us at: 📧 <a href="mailto:info@kimosgarden.com">info@kimosgarden.com</a></p>
+        <p>Email us at: 📧 <a href="mailto:Zeina_bj_98@hotmail.co.uk">Zeina_bj_98@hotmail.co.uk</a></p>
         <p>Location:</p>
         <div class="map-container">
             <iframe
