80% done of the menu finalized some details and about and contact page are done

--- a/HTML/About.html
+++ b/HTML/About.html
@@ -35,5 +35,17 @@
     <a href="https://wa.me/961XXXXXXXX" class="whatsapp-float" target="_blank">
             <img src="../Media/whatsapp-icon.png" alt="WhatsApp" class="whatsapp-icon">
     </a>
+    <script>
+        document.querySelectorAll('a').forEach(link => {
+        link.addEventListener('click', e => {
+            if (link.href.includes('#') || link.target === '_blank') return;
+            e.preventDefault();
+            document.body.classList.add('fade-out');
+            setTimeout(() => {
+            window.location = link.href;
+            }, 400);
+        });
+        });
+    </script>
 </body>
 </html>
