--- a/HTML/Home.html
+++ b/HTML/Home.html
@@ -8,11 +8,11 @@
     <link rel="stylesheet" href="../CSS/StyleHome.css">
 </head>
 <body>
-    <!--<div id="intro">
+    <div id="intro">
         <video id="intro-video" autoplay muted playsinline>
             <source src="../Media/Kimo's garden logo.mp4" type="video/mp4">
         </video>
-    </div>-->
+    </div>
     
     
 
