--- a/HTML/Menu.html
+++ b/HTML/Menu.html
@@ -63,10 +63,10 @@
             <button class="menu-button" onclick="location.href='../HTML/Desserts.html'">View More</button>
         </div>
         <div class="menu-item">
-            <img src="../Media/drinks.jpeg" alt="Drinks">
-            <h3>Drinks</h3> 
+            <img src="../Media/Beverages.jpeg" alt="Beverages">
+            <h3>beverages</h3> 
             <p>Refreshing beverages to complement your meal.</p>
-            <button class="menu-button" onclick="location.href='../HTML/Drinks.html'">View More</button>
+            <button class="menu-button" onclick="location.href='../HTML/Beverages.html'">View More</button>
         </div>
         <div class="menu-item">
             <h3>Extras</h3>
@@ -77,5 +77,17 @@
     <a href="https://wa.me/961XXXXXXXX" class="whatsapp-float" target="_blank">
             <img src="../Media/whatsapp-icon.png" alt="WhatsApp" class="whatsapp-icon">
     </a>
+    <script>
+        document.querySelectorAll('a').forEach(link => {
+        link.addEventListener('click', e => {
+            if (link.href.includes('#') || link.target === '_blank') return;
+            e.preventDefault();
+            document.body.classList.add('fade-out');
+            setTimeout(() => {
+            window.location = link.href;
+            }, 400);
+        });
+        });
+    </script>
 </body>
 </html>
