finalized phase designed

--- a/HTML/Platters.html
+++ b/HTML/Platters.html
@@ -10,6 +10,23 @@
 <body>
     <a href="../HTML/Menu.html" class="back-button">← Back to Menu</a>
     <h1>Platters</h1>
+    <div id="Menu-container">
+        <div class="menu-item">
+            <h2>Tawouk Platter</h2>
+            <p>Double portion chicken, coleslaw, pickles, garlic, and fries</p>
+            <p>Price: $9</p>
+        </div>
+        <div class="menu-item">
+            <h2>Crispy Platter</h2>
+            <p>5 fried chicken crispy, BBQ sauce, cheddar sauce, pickles, fries, and coleslaw</p>
+            <p>Price: $10</p>
+        </div>
+        <div class="menu-item">
+            <h2>Beef Burger Platter</h2>
+            <p>2 beef patty, tomato, pickles, sauce cocktail, served with fries and coleslaw</p>
+            <p>Price: $12</p>
+        </div>
+    </div>
     <a href="https://wa.me/961XXXXXXXX" class="whatsapp-float" target="_blank">
             <img src="../Media/whatsapp-icon.png" alt="WhatsApp" class="whatsapp-icon">
     </a>
