--- a/HTML/Home.html
+++ b/HTML/Home.html
@@ -31,7 +31,7 @@
             <h1>Welcome to Kimo’s Garden Restaurant</h1>
             <h2>Where nature meets flavor</h2>
         </div>
-        <a href="https://wa.me/961XXXXXXXX" class="whatsapp-float" target="_blank">
+        <a href="https://wa.me/96171804331?text=Hello%2C%20please%20I%20would%20like%20to%20order." class="whatsapp-float" target="_blank">
             <img src="../Media/whatsapp-icon.png" alt="WhatsApp" class="whatsapp-icon">
         </a>
     </div>
