moved index to outter folder

--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Welcome to Kimo's Garden</title>
     <link rel="icon" type="image/png" href="../Media/Kimo'sGarden-Logo.png">
-    <link rel="stylesheet" href="../CSS/StyleHome.css">
+    <link rel="stylesheet" href="./CSS/StyleHome.css">
 </head>
 <body>
     <div id="intro">
         <video id="intro-video" autoplay muted playsinline>
-            <source src="../Media/Kimo's garden logo.mp4" type="video/mp4">
+            <source src="./Media/Kimo's garden logo.mp4" type="video/mp4">
         </video>
     </div>
     
@@ -22,19 +22,19 @@
             <aside class="sidebar">
                 <h2>Kimo’s Garden</h2>
                 <ul>
-                    <li><a href="../HTML/Home.html">Home</a></li>
-                    <li><a href="../HTML/Menu.html">Menu</a></li>
-                    <li><a href="../HTML/About.html">About</a></li>
-                    <li><a href="../HTML/Contact.html">Contact</a></li>
+                    <li><a href="../index.html">Home</a></li>
+                    <li><a href="./HTML/Menu.html">Menu</a></li>
+                    <li><a href="./HTML/About.html">About</a></li>
+                    <li><a href="./HTML/Contact.html">Contact</a></li>
                 </ul>
             </aside>
             <h1>Welcome to Kimo’s Garden Restaurant</h1>
             <h2>Where nature meets flavor</h2>
         </div>
         <a href="https://wa.me/96171804331?text=Hello%2C%20please%20I%20would%20like%20to%20order." class="whatsapp-float" target="_blank">
-            <img src="../Media/whatsapp-icon.png" alt="WhatsApp" class="whatsapp-icon">
+            <img src="./Media/whatsapp-icon.png" alt="WhatsApp" class="whatsapp-icon">
         </a>
     </div>
-    <script src="../JS/HomeScript.js"></script>
+    <script src="./JS/HomeScript.js"></script>
 </body>
 </html>
