--- a/HTML/About.html
+++ b/HTML/About.html
@@ -11,7 +11,7 @@
     <aside class="sidebar">
         <h2>Kimo’s Garden</h2>
         <ul>
-            <li><a href="../HTML/Home.html">Home</a></li>
+            <li><a href="../index.html">Home</a></li>
             <li><a href="../HTML/Menu.html">Menu</a></li>
             <li><a href="../HTML/About.html">About</a></li>
             <li><a href="../HTML/Contact.html">Contact</a></li>
