--- a/HTML/Contact.html
+++ b/HTML/Contact.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact</title>
     <link rel="icon" type="image/png" href="../Media/Kimo'sGarden-Logo.png">
-    <link rel="stylesheet" href="../CSS/StyleContact.Css">
+    <link rel="stylesheet" href="../CSS/StyleContact.css">
 </head>
 <body>
     <aside class="sidebar">
