--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <aside class="sidebar">
                 <h2>Kimo’s Garden</h2>
                 <ul>
-                    <li><a href="../index.html">Home</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="./HTML/Menu.html">Menu</a></li>
                     <li><a href="./HTML/About.html">About</a></li>
                     <li><a href="./HTML/Contact.html">Contact</a></li>
