--- a/HTML/Contact.html
+++ b/HTML/Contact.html
@@ -33,7 +33,7 @@
             </iframe>
         </div>
     </div>
-    <a href="https://wa.me/961XXXXXXXX" class="whatsapp-float" target="_blank">
+    <a href="https://wa.me/96171804331?text=Hello%2C%20please%20I%20would%20like%20to%20order." class="whatsapp-float" target="_blank">
             <img src="../Media/whatsapp-icon.png" alt="WhatsApp" class="whatsapp-icon">
     </a>
     <script>
